--- a/.classpath
+++ b/.classpath
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-14">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/log4j"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="lib" path="C:/Users/andu5/.p2/pool/plugins/org.eclipse.osgi_3.15.300.v20200520-1959.jar" sourcepath="C:/Users/andu5/.p2/pool/plugins/org.eclipse.osgi_3.15.300.v20200520-1959.jar"/>
 	<classpathentry kind="lib" path="C:/Users/andu5/.p2/pool/plugins/org.eclipse.core.commands_3.9.700.v20191217-1850.jar" sourcepath="C:/Users/andu5/.p2/pool/plugins/org.eclipse.core.commands_3.9.700.v20191217-1850.jar"/>
 	<classpathentry kind="lib" path="C:/Users/andu5/.p2/pool/plugins/org.eclipse.equinox.common_3.12.0.v20200504-1602.jar" sourcepath="C:/Users/andu5/.p2/pool/plugins/org.eclipse.equinox.common_3.12.0.v20200504-1602.jar"/>
@@ -20,5 +20,6 @@
 	<classpathentry kind="lib" path="C:/Users/andu5/.p2/pool/plugins/com.ibm.icu_64.2.0.v20190507-1337.jar" sourcepath="C:/Users/andu5/.p2/pool/plugins/com.ibm.icu_64.2.0.v20190507-1337.jar"/>
 	<classpathentry kind="lib" path="C:/Users/andu5/.p2/pool/plugins/org.eclipse.ui.forms_3.9.100.v20200413-1417.jar" sourcepath="C:/Users/andu5/.p2/pool/plugins/org.eclipse.ui.forms_3.9.100.v20200413-1417.jar"/>
 	<classpathentry kind="lib" path="D:/Cosas varias/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21/mysql-connector-java-8.0.21.jar"/>
+	<classpathentry kind="lib" path="D:/Jasper Reportes/Jaspersoft Studio-6.14.0/plugins/com.jaspersoft.studio.server_6.14.0.final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
