- Ahora se configura la base al iniciar por primera vez

--- a/otros/sql/configDB.properties
+++ b/otros/sql/configDB.properties
@@ -1,7 +1,7 @@
 #Fichero de Propiedades de la conexion
-#Fri Oct 09 03:54:33 ART 2020
+#Fri Oct 09 04:00:30 ART 2020
 password=
-port=3306
-host=localhost
+port=
+host=
 allowMultiQueries=true
-user=root
+user=
